# werent-backend

./: .coverage  .gitignore  API_DOCUMENTATION.md  CONTRIBUTING.md  Dockerfile  FEAT_SWAGGER_SUMMARY.md  PROJECT_STATUS.md  Procfile  README.md  SCHEMAS_DOCUMENTATION.md  SWAGGER_DOCUMENTATION.md  demo_base64_profile.py  main.py  package-lock.json  pyproject.toml  render-build.sh  requirements.txt  setup.sh  test_base64_profile.py  test_detailed_inspection.py  test_dev_database.py  test_phone_consistency.py  test_sqlite_direct.py  test_sqlite_profile.py
app/: __init__.py  extensions.py
config/: __init__.py  config.py
docs/: ADMIN_ENDPOINTS.md  ADMIN_ENDPOINTS_COMPREHENSIVE.md  ADMIN_MANAGEMENT.md  AUTH_SYSTEM_UPDATE.md  AUTOMATIC_MIGRATION_SUMMARY.md  COMPLETE_DOCUMENTATION_SUMMARY.md  CONTRIBUTING.md  DATABASE_RESET_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_SYNC_SUMMARY.md  EMAIL_ROUTING_SUMMARY.md  EMAIL_TESTING_CONFIGURATION.md  FEAT_SWAGGER_SUMMARY.md  GIT_WORKFLOW.md  IMAGE_UPLOAD_BEST_PRACTICES.md  MIGRATION_WORKFLOW.md  PROFILE_IMAGE_DOCUMENTATION.md  README.md  RENDER_GUNICORN_FIX.md  SCHEMAS_DOCUMENTATION.md  SWAGGER_COMPREHENSIVE_DOCUMENTATION.md  SWAGGER_DOCUMENTATION.md  SWAGGER_MODULAR_REFACTORING.md  SWAGGER_REORGANIZATION_SUMMARY.md  SWAGGER_SERVER_CONFIG.md  api_documentation.md  dev_notes.md  project_status.md
examples/: file_upload_service.py
instance/: camrent-dev.db  camrent.db  werent-dev.db
scripts/: migration-manager.sh  supabase-complete-reset.sql
tests/: __init__.py  conftest.py  test_auth.py  test_auth_schema.py  test_booking_routes.py  (+8 more)
(+98 files in other folders)
